--- a/cluster/client/html/index.html
+++ b/cluster/client/html/index.html
@@ -14,6 +14,14 @@
 
     <div id="container">
         <div class="container" id="products-container">
+
+            <button id="spark-task">
+                <span class="spark-text">Envoyer une tâche à Spark pour trouver les produits fréquents</span>
+                <span class="spark-loading" style="display: none;">Loading...</span>
+            </button>
+
+            <div class="spark-results" style="display: none;">Les résultats sont dans la console!</div>
+
             <h2>Produit</h2>
             <h3>Nouveau Produit</h3>
 
